lox-tests/tests/field/call_nonfunction_field.stderr
ERROR: Can only call objects of type function or class, not string
 --> 6:1
  |
6 | foo.bar(); // expect runtime error: Can only call functions and classes.
  | ^-------^
